Kubernetes/kind/ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  tls:
#    - hosts:
#      - localhost
#      secretName: tls-secret
  rules:
  - host: localhost  # for a particular host name to work we need probably to edit hosts file
    http:
      paths:
        - pathType: Prefix
          path: /foo
          backend:
            service:
              name: foo-service
              port:
                number: 5678

        - pathType: Prefix
          path: /bar # not existing service
          backend:
            service:
              name: bar-service
              port:
                number: 5678
---

# localhost/foo - should be found
# localhost/bar - should not be found
